{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 1447,
  "lineage": "427cb8f4-e978-6af6-f859-bc6f49dcee0f",
  "resources": [
    {
      "module": "module.main_node",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08daca4640726cc73",
            "arn": "arn:aws:ec2:us-west-1:027522505557:instance/i-0bb9541a6d08d746f",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bb9541a6d08d746f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mainkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0b9666cd0b762a2cc",
            "private_dns": "ip-10-121-1-62.us-west-1.compute.internal",
            "private_ip": "10.121.1.62",
            "public_dns": "ec2-13-56-253-50.us-west-1.compute.amazonaws.com",
            "public_ip": "13.56.253.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0de290ab163c80a4d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a5c923a74495578",
            "tags": {
              "Environment": "dev",
              "Name": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "10m",
              "delete": "20m",
              "update": "10m"
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "dev"
            },
            "vpc_security_group_ids": [
              "sg-00520cca60f0a2348"
            ]
          },
          "dependencies": [
            "aws_key_pair.main_auth",
            "data.aws_ami.main_ami",
            "module.main_public_subnet.aws_subnet.main_public_subnet",
            "module.main_vpc.aws_vpc.main_vpc",
            "module.security_grp.aws_security_group.main_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08daca4640726cc73",
            "arn": "arn:aws:ec2:us-west-1:027522505557:instance/i-0ef8ca87948273359",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ef8ca87948273359",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mainkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-054a4ae899f963985",
            "private_dns": "ip-10-121-1-223.us-west-1.compute.internal",
            "private_ip": "10.121.1.223",
            "public_dns": "ec2-3-101-135-103.us-west-1.compute.amazonaws.com",
            "public_ip": "3.101.135.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-084527c047a688a40",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a5c923a74495578",
            "tags": {
              "Environment": "dev",
              "Name": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "10m",
              "delete": "20m",
              "update": "10m"
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "dev"
            },
            "vpc_security_group_ids": [
              "sg-00520cca60f0a2348"
            ]
          },
          "dependencies": [
            "aws_key_pair.main_auth",
            "data.aws_ami.main_ami",
            "module.main_public_subnet.aws_subnet.main_public_subnet",
            "module.main_vpc.aws_vpc.main_vpc",
            "module.security_grp.aws_security_group.main_sg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08daca4640726cc73",
            "arn": "arn:aws:ec2:us-west-1:027522505557:instance/i-0ea024269b4769591",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ea024269b4769591",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mainkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-002955f3f48452ed8",
            "private_dns": "ip-10-121-1-79.us-west-1.compute.internal",
            "private_ip": "10.121.1.79",
            "public_dns": "ec2-13-56-82-205.us-west-1.compute.amazonaws.com",
            "public_ip": "13.56.82.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f8c3f6426540137b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a5c923a74495578",
            "tags": {
              "Environment": "dev",
              "Name": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "10m",
              "delete": "20m",
              "update": "10m"
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "dev"
            },
            "vpc_security_group_ids": [
              "sg-00520cca60f0a2348"
            ]
          },
          "dependencies": [
            "aws_key_pair.main_auth",
            "data.aws_ami.main_ami",
            "module.main_public_subnet.aws_subnet.main_public_subnet",
            "module.main_vpc.aws_vpc.main_vpc",
            "module.security_grp.aws_security_group.main_sg"
          ]
        }
      ]
    },
    {
      "module": "module.main_public_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:027522505557:subnet/subnet-05a5c923a74495578",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.121.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a5c923a74495578",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "027522505557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public"
            },
            "tags_all": {
              "Name": "dev-public"
            },
            "vpc_id": "vpc-0b0d51843be077747"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:027522505557:vpc/vpc-0b0d51843be077747",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.121.0.0/16",
            "default_network_acl_id": "acl-0e3b15a8a982a9d6f",
            "default_route_table_id": "rtb-04736a2fdf5bf044d",
            "default_security_group_id": "sg-03570a1fe47face8a",
            "dhcp_options_id": "dopt-0c10202b7da5d53be",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b0d51843be077747",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04736a2fdf5bf044d",
            "owner_id": "027522505557",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            }
          }
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_internet_gtw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:027522505557:internet-gateway/igw-06f5c9d336fdb17e1",
            "id": "igw-06f5c9d336fdb17e1",
            "owner_id": "027522505557",
            "tags": {
              "Name": "dev-gtw"
            },
            "tags_all": {
              "Name": "dev-gtw"
            },
            "vpc_id": "vpc-0b0d51843be077747"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06f5c9d336fdb17e1",
            "id": "r-rtb-08b3547f6e21155bf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08b3547f6e21155bf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main_vpc.aws_vpc.main_vpc",
            "module.route.aws_internet_gateway.main_internet_gtw",
            "module.route.aws_route_table.main_rt"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:027522505557:route-table/rtb-08b3547f6e21155bf",
            "id": "rtb-08b3547f6e21155bf",
            "owner_id": "027522505557",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-public-rt"
            },
            "tags_all": {
              "Name": "dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0d51843be077747"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_public_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eea4fe1d04b6714f",
            "route_table_id": "rtb-08b3547f6e21155bf",
            "subnet_id": "subnet-05a5c923a74495578"
          },
          "dependencies": [
            "module.main_public_subnet.aws_subnet.main_public_subnet",
            "module.main_vpc.aws_vpc.main_vpc",
            "module.route.aws_route_table.main_rt"
          ]
        }
      ]
    },
    {
      "module": "module.security_grp",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:027522505557:security-group/sg-00520cca60f0a2348",
            "description": "dev security grp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00520cca60f0a2348",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingress rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dev-sg",
            "name_prefix": "",
            "owner_id": "027522505557",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "dev"
            },
            "tags_all": {
              "name": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0d51843be077747"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    }
  ]
}